<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meal Planner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beam">贴一贴排排队</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_main">Meal Planner</string>
    <string name="title_activity_restinfo">餐馆详细</string>
    <string name="title_activity_planMeal">组饭局</string>
    <string name="title_activity_order">在线订餐</string>
    <string name="title_activity_orderList">我的订单</string>
    <string name="title_activity_orderDetail">订单详情</string>
    <string name="title_activity_mealList">我的饭局</string>
    <string name="title_activity_mealDetail">饭局详情</string>
    <string name="title_activity_InvitationDetail">邀请详情</string>
    <string name="title_activity_InvitationList">我的邀请</string>
    <string name="startPage">首页</string>
    <string name="planMeal">组饭局</string>
    <string name="lineUp">排排队</string>
    <string name="myInfo">我的</string>
    <string name="oderSeat">在线订座</string>
    <string name="chooseFriends">选择好友</string>
    <string name="sure">确定</string>
    <string name="pickTime">请选择时间</string>
	<string name="pickDate">请选择日期</string>
	<string name="place">地点</string>
	<string name="friend">邀请好友</string>
	<string name="userInfo">我的信息</string>
	<string name="myOrder">我的订单</string>
	<string name="myInvitation">我的邀请</string>
	<string name="myfriends">我的好友</string>
	<string name="myDishes">我的菜单</string>
	<string name="contactInfo">联系信息</string>
	<string name="numOfPeople">人数</string>
	<string name="phoneNum">手机</string>
	<string name="email">邮箱</string>
	<string name="imgContentBack">backgroundView</string>
	<string name="imgContentUser">userImage</string>
	<string name="createOrder">创建订单</string>
	<string name="cancleOrder">取消订单</string>
	<string name="accept">接受邀请</string>
	<string name="refuse">拒绝邀请</string>
	<string name="organizer">邀请发起人</string>
    <string name="nfc_prompt">手机接触NFC设备</string>
    <string name="lineTxt">请输入用餐人数:</string>
    <string name="personTxt">人</string>
    <string name="queue">排队用餐</string>
    <string name="view">View</string>
    <string name="home">主       页</string>
    <string name="lineUpSee">更新信息</string>
    <string name="lineUpCancel">取消排队</string>
    <string name="lineUpMsg">抱歉哦亲╭(╯3╰)╮，您还没有参与线下排队或排队已结束！通过餐馆NFC卡即可体验线下排队的乐趣哦O(∩_∩)O~</string>
    <string name="lineUpMsg2">您有5人就餐，为您提供了6人桌，前面还有3位排队6人桌，大约等待2小时</string>
    <string name="lineUpMesgTime">获取信息时间：</string>
    <string name="lineUpTime"></string>
    <string name="title_activity_regist">注册</string>
    <string name="regist">注                          册</string>
    <string name="namehint">请输入用户名</string>
    <string name="phonehint">请输入电话</string>
    <string name="emailhint">请输入邮箱</string>
    <string name="pwdhint">请输入密码</string>
    <string name="pwdrehint">请确认密码</string>
    <string name="returnLogin">返回</string>

</resources>
