<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#DC143C"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="#FFFFFFFF"
            android:textSize="9pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/registname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namehint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/registPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonehint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/registemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/registpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwdhint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/registpwdsure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwdrehint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnReturn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#DC143C"
            android:drawableLeft="@drawable/btn_return"
            android:text="@string/returnLogin"
            android:textColor="#FFFFFF"
            android:textSize="8pt" />
        
        <Button
            android:id="@+id/btnRegist"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#DC143C"
            android:drawableLeft="@drawable/sign_in"
            android:text="@string/regist"
            android:textColor="#FFFFFF"
            android:textSize="8pt" />
    </LinearLayout>

</LinearLayout>