<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnChooseDate"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/date"
            android:text="@string/pickDate"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnChooseTime"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/time"
            android:text="@string/pickTime"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/place"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/star"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/myDishes"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewDishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/friend"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/contactInfo"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/MyMealTextView"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/heart"
                android:drawablePadding="15dp"
                android:gravity="center|left"
                android:text="@string/numOfPeople"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="numberSigned" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGoOrder"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="#DC143C"
            android:text="@string/sure"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>