<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/promt"
        android:layout_width="fill_parent"
        android:layout_height="20pt"
        android:gravity="center"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/nfc_prompt"
        android:textSize="9pt" />

    <LinearLayout
        android:id="@+id/lineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15pt"
            android:text="@string/lineTxt"
            android:textSize="7pt" />

        <EditText
            android:id="@+id/personNum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:text="@string/personTxt"
            android:textSize="7pt" />

        <Button
            android:id="@+id/btn_line"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginRight="15pt"
            android:background="@drawable/login2"
            android:text="@string/sureLine"
            android:textSize="6pt" />
        
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nfc_view" />

</LinearLayout>