<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/date"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/place"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/star"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/myDishes"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewDishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/friend"
                android:drawablePadding="15dp"
                android:gravity="center|left"
                android:text="@string/phoneNum"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textOrganizer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/MyMealTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/heart"
                android:drawablePadding="15dp"
                android:gravity="center|left"
                android:text="@string/numOfPeople"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCancle"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="#DC143C"
            android:text="@string/cancleOrder"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>