<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textMealId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/friend"
                android:drawablePadding="15dp"
                android:gravity="center|left"
                android:text="@string/organizer"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textOrganizer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/date"
            android:drawablePadding="15dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="15dp"
            android:gravity="center|left"
            android:text="@string/place"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#DC143C"
                android:text="@string/accept"
                android:textColor="#FFFFFF" 
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btnRefuse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#DC143C"
                android:text="@string/refuse"
                android:textColor="#FFFFFF"
                android:onClick="onClick" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>